--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
 <h1>Bienvenido a mi pagina</h1>
 <ul>
-    <li><a href="pagina1.html">           PRACTICA PRIMERA</a></li>
-    <li><a href="pagina2.html">           PRACTICA SEGUNDA</a></li>
+    <li><a href="pagina1.html">           PRIMERA PRACTICA</a></li>
+    <li><a href="pagina2.html">           SEGUNDA PRACTICA</a></li>
     <li><a href="partes.html">             PRUEBA PARTES</a></li>
     <li><a href="partes2.html">           PRUEBA PARTES2</a></li>
     <li><a href="practicageneral.html">   PRACTICA GENERAL</a></li>
