--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <title>MENU</title>
 </head>
 <body>
-<h1>Bienvenido a mi pagina</h1>
+<h1><h2><span Style="color:Purple">Bienvenido a mi pagina</span></h2>
+<h1><h2><span Style="color:Black">REISHELL ROXANY ZUÑIGA</span></h2>
+<figure>
+     <img src="rei.jpg" alt="ejemplo de imagen""width="500"height=300">
+  </figure>
+
+
 <ul>
     <li><a href="pagina1.html">           PRACTICA PRIMERA</a></li>
     <li><a href="pagina2.html">           PRACTICA SEGUNDA</a></li>
