--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <figure>
      <img src="rei.jpg" alt="ejemplo de imagen""width="500"height=300">
   </figure>
-
+<h1><h2><span Style="color:Pink">Paginas para consultar</span></h2>
 
 <ul>
     <li><a href="pagina1.html">           PRACTICA PRIMERA</a></li>
