--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <title>MENU</title>
 </head>
 <body>
-<h1><h2><span Style="color:Purple">Bienvenido a mi pagina</span></h2>
-<h1><h2><span Style="color:Black">REISHELL ROXANY ZUÑIGA</span></h2>
+<h2><span Style="color:Purple">Bienvenido a mi pagina</span></h2>
+<h2><span Style="color:Black">REISHELL ROXANY ZUÑIGA</span></h2>
 <figure>
      <img src="rei.jpg" alt="ejemplo de imagen""width="500"height=300">
   </figure>
-<h1><h2><span Style="color:Pink">Paginas para consultar</span></h2>
+     <h2><span Style="color:Pink">Paginas para consultar</span></h2>
 
 <ul>
     <li><a href="pagina1.html">           PRACTICA PRIMERA</a></li>
