--- a/practicageneral.html
+++ b/practicageneral.html
@@ -14,9 +14,9 @@
 <p><h1> !PISA FUERTE¡ CAMINA CON ESTILO</h1></p>
 
 <ul>
-  <li><a href="download.jpg"> Nike</a></li>
-  <li><a href="ID1437_01_standard.avif"> Adidas</a></li>
-  <li><a href="344667-800-800.webp"> Puma</a></li>
+  <li><a href="tenis1"> Nike</a></li>
+  <li><a href="tenis2"> Adidas</a></li>
+  <li><a href="tenis3"> Puma</a></li>
 
 </ul>
 
