--- a/practicageneral.html
+++ b/practicageneral.html
@@ -14,9 +14,9 @@
 <p><h1> !PISA FUERTE¡ CAMINA CON ESTILO</h1></p>
 
 <ul>
-  <li><a href="tenis1"> Nike</a></li>
-  <li><a href="tenis2"> Adidas</a></li>
-  <li><a href="tenis3"> Puma</a></li>
+  <li><a href="tenis1.jpg"> Nike</a></li>
+  <li><a href="tenis2.jpg"> Adidas</a></li>
+  <li><a href="tenis3.jpg"> Puma</a></li>
 
 </ul>
 
