--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <li><a href="partes2.html">           PRUEBA PARTES2</a></li>
     <li><a href="practicageneral.html">   PRACTICA GENERAL</a></li>
     <li><a href="tablas2.html">          TABLAS</a></li>
-     <li><a href="formulario2.html">          FORMULARIO</a></li>
+    <li><a href="formulario2.html">          FORMULARIO</a></li>
+     <li><a href="reishell practica examen.html">  PRACTICA EXAMEN</a></li>
 </ul>
 </body>
 </html>
