--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a href="tablas2.html">          TABLAS</a></li>
     <li><a href="formulario2.html">          FORMULARIO</a></li>
      <li><a href="reishell practica examen.html">  PRACTICA EXAMEN</a></li>
-      <li><a href="reishell Frutas.html">  Frutas</a></li>
+      <li><a href="Frutas.html">  Frutas</a></li>
 </ul>
 </body>
 </html>
