--- a/Frutas.html
+++ b/Frutas.html
@@ -72,6 +72,17 @@
      <div class="col-sm-4 p-3 bg-warning text-drank">La textura de las frutas debe ser, por lo general, firme pero no dura, y ceder ligeramente a la presión sin ser blanda. La jugosidad es otra característica importante, especialmente en frutas como el melocotón,</div>
   </div>
 </div>
+<ul class="pagination justify-content-center">
+    
+    <li class="page-item"><a class="page-link" href="Frutas.html">Pag1</a></li>
+    <li class="page-item"><a class="page-link" href="pag2.html">Pag2</a></li>
+    <li class="page-item"><a class="page-link" href="pag3.html">Pag3</a></li>
+    <li class="page-item"><a class="page-link" href="pag4.html">Pag4</a></li>
+    <li class="page-item"><a class="page-link" href="pag5.html">Pag5</a></li>
+    <li class="page-item"><a class="page-link" href="pag6.html">Pag6</a></li>
+  </ul>
+ 
+
 
 
 
